# Code-Audit-MCP

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  design.md  implementation_plan.md  requirements.md  test_vulnerability_detection.py
.github/workflows/: clean-check.yml
backend/: go.mod
backend/proto/: call_chain_grpc.pb.go  indexer.proto  taint_analysis_pb2_grpc.py
docs/assets/: .gitkeep  README.txt
frontend/: package-lock.json  package.json
go-backend/: go.mod  go.sum
go-backend/proto/: ast_parser.pb.go  indexer.pb.go  (+12 more)
proto/: __init__.py  ast_parser.proto  ast_parser_grpc.pb.go  ast_parser_pb2.py  ast_parser_pb2_grpc.py  taint_analysis.proto  taint_analysis_pb2.py
python-mcp/: pyproject.toml  test_ast_parser.py  test_grpc_connection.py  test_javascript_parser.py  test_typescript_parser.py
python-mcp/src/: test_call_graph.py  test_poc.py  test_scan.py  test_taint.py  test_vuln.py
python-mcp/src/code_audit_mcp/: __init__.py  server.py
python-mcp/src/code_audit_mcp/ai/: provider.py
python-mcp/src/code_audit_mcp/proto/: ast_parser_pb2_grpc.py  call_chain_pb2_grpc.py  indexer_pb2_grpc.py  taint_analysis_pb2.py  taint_analysis_pb2_grpc.py
python-mcp/src/code_audit_mcp/tools/: __init__.py  call_graph_analyzer.py  code_explainer.py  code_scanner.py  poc_generator.py  taint_tracer.py  vulnerability_scanner.py  vulnerability_searcher.py
release/: README-release.md  start-server.ps1
scripts/: build-release.ps1  check-clean-state.ps1
web-ui/: .env.standalone  package-lock.json  package.json
(+49 files in other folders)
